Implementado Versão 2 crud paciente, utilizando mapstructure. Criado classes para implementação versão 2 de medico.